实现附加需求2，增加CellType

--- a/ThoughtWorks_HomeWork_Dev/ThoughtWorks_HomeWork_Dev.vcxproj.filters
+++ b/ThoughtWorks_HomeWork_Dev/ThoughtWorks_HomeWork_Dev.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="StrAlgo.h">
       <Filter>源文件\Utils</Filter>
     </ClInclude>
+    <ClInclude Include="CellType.h">
+      <Filter>源文件\Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile">
