--- a/ThoughtWorks_HomeWork_Dev/ThoughtWorks_HomeWork_Dev.vcxproj
+++ b/ThoughtWorks_HomeWork_Dev/ThoughtWorks_HomeWork_Dev.vcxproj
@@ -146,6 +146,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CellType.h" />
     <ClInclude Include="CharSet.h" />
     <ClInclude Include="CLibsImpl.h" />
     <ClInclude Include="InputCheck.h" />
