--- a/ThoughtWorks_HomeWork_Dev/ThoughtWorks_HomeWork_Dev.vcxproj.filters
+++ b/ThoughtWorks_HomeWork_Dev/ThoughtWorks_HomeWork_Dev.vcxproj.filters
@@ -27,9 +27,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CLibsImpl.h">
-      <Filter>源文件\Impl</Filter>
-    </ClInclude>
     <ClInclude Include="OutputFormatImpl.h">
       <Filter>源文件\Impl</Filter>
     </ClInclude>
@@ -64,6 +61,9 @@
       <Filter>源文件\Utils</Filter>
     </ClInclude>
     <ClInclude Include="CellType.h">
+      <Filter>源文件\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="CLibsImpl.h">
       <Filter>源文件\Utils</Filter>
     </ClInclude>
   </ItemGroup>
